<resources>
    <string name="app_name">SuperQuizzer</string>
    <!--my strings-->
    <string name="create_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email_id">Email Id</string>
    <string name="register">REGISTER</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="app_icon">app_icon</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="login">Login</string>
    <string name="superquizzersplash">SuperQuizzerSplash</string>
    <string name="superquizzer">SuperQuizzer</string>
    <string name="s">S</string>
    <string name="logo">logo?</string>
    <string name="don_t_have_an_account">Don\'t have an Account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_button">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="password_text">Password</string>
    <string name="email_ID">Email ID</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="enter_your_e_mail_address_and_we_ll_send_you_an_email_to_reset_your_password">Enter your e-mail address and we\'ll send you an email to reset your password.</string>
    <string name="submit">Submit</string>
    <string name="back_button_for_this_page">Back button</string>
    <string name="design">design</string>
    <string name="back">back</string>
    <string name="please_wait">Please Wait...</string>
    <string name="congratulations">Congratulations!!</string>
    <string name="username">username</string>
    <string name="e_mail">e_mail</string>
    <string name="delete_account">Delete account</string>
    <string name="switch_mode">Switch mode</string>
    <string name="settings">Settings</string>
</resources>