<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    tools:context=".Settings">

    <LinearLayout
        android:id="@+id/linearlayout_forgot"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:background="@drawable/top_bottom_shape"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_forgot"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="73dp"
                android:layout_height="66dp"
                android:layout_marginStart="148dp"
                android:layout_marginTop="56dp"
                android:contentDescription="@string/s"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/app_logo1_foreground" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="73sp"
                android:layout_height="0dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="95dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="21dp"
                android:contentDescription="@string/logo"
                app:layout_constraintBottom_toTopOf="@+id/logoText"
                app:layout_constraintEnd_toEndOf="@+id/logoText"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/app_logo2_foreground" />

            <TextView
                android:id="@+id/logoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="42dp"
                android:text="@string/superquizzer"
                android:textColor="#FBF9F9"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="300dp"
                android:layout_marginBottom="210dp"
                android:contentDescription="@string/back_button_for_this_page"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_baseline_arrow_white_back_24" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


    <Switch
        android:id="@+id/switchbtn"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#0E27AE"
        android:drawableStart="@drawable/ic_baseline_account_circle_24"
        android:drawablePadding="10sp"
        android:ems="10"
        android:hint="@string/switch_mode"
        android:minHeight="48dp"
        android:textColorHint="#2196F3"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout_forgot"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="#152DB3"
        android:text="@string/delete_account"
        android:textColor="#FDFDFD"
        android:textStyle="bold"
        app:cornerRadius="50sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switchbtn" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="421dp"
        android:layout_height="177dp"
        android:orientation="vertical"
        android:scaleType="fitEnd"
        android:src="@drawable/wave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="105dp"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/switchbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout_forgot"
        app:layout_constraintVertical_bias="0.253" />

    >


</androidx.constraintlayout.widget.ConstraintLayout>