<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myback"
    tools:context=".RegisterActivity">
    <ImageView
        android:id="@+id/back_image"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_marginBottom="701dp"
        android:background="@color/myback"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/back_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toEndOf="@+id/back_image"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@color/btnback"
        android:backgroundTint="@color/btnback"
        android:text="@string/first_name"
        android:hint="@string/first_name"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textColorHint="@color/tint"
        app:layout_constraintBottom_toTopOf="@+id/last_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.5"
        android:autofillHints="First Name"
        android:inputType="text"/>

    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/btnback"
        android:backgroundTint="@color/btnback"
        android:text="@string/last_name"
        android:hint="@string/last_name"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textColorHint="@color/tint"
        app:layout_constraintBottom_toTopOf="@+id/email_et"
        app:layout_constraintTop_toBottomOf="@+id/first_name"
        app:layout_constraintVertical_bias="0.5"
        tools:layout_editor_absoluteX="155dp"
        android:autofillHints="Last Name"
        android:inputType="text" />

    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/btnback"
        android:backgroundTint="@color/btnback"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/email_id"
        android:textAlignment="viewStart"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textColorHint="@color/tint"
        app:layout_constraintBottom_toTopOf="@+id/password_et"
        app:layout_constraintTop_toBottomOf="@+id/last_name"
        app:layout_constraintVertical_bias="0.5"
        tools:layout_editor_absoluteX="157dp"
        android:autofillHints="Email Id" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/password"
        android:hint="@string/password"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textColorHint="@color/tint"
        android:background="@color/btnback"
        android:backgroundTint="@color/btnback"
        app:layout_constraintBottom_toTopOf="@+id/conf_password_et"
        app:layout_constraintTop_toBottomOf="@+id/email_et"
        app:layout_constraintVertical_bias="0.5"
        tools:layout_editor_absoluteX="157dp"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/conf_password_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/confirm_password"
        android:hint="@string/confirm_password"
        android:background="@color/btnback"
        android:backgroundTint="@color/btnback"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textColorHint="@color/tint"
        app:layout_constraintBottom_toTopOf="@+id/register_btn"
        app:layout_constraintTop_toBottomOf="@+id/password_et"
        app:layout_constraintVertical_bias="0.5"
        tools:layout_editor_absoluteX="157dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/btnback"
        android:layout_marginBottom="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />


    <CheckBox
        android:id="@+id/terms_cond_cbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="5dp"
        android:text="I Agree To The Terms &amp; Condition"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/register_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conf_password_et"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="HardcodedText" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textCursorDrawable="@color/purple_200"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.371"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_btn"
        app:layout_constraintVertical_bias="0.214" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="18dp"
        android:text="@string/login"
        android:textColor="#091A8E"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/register_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>